--- a/public/assets/css/demo_1/style.css
+++ b/public/assets/css/demo_1/style.css
@@ -3998,7 +3998,10 @@ input[type="button"].btn-block {
 .card-img-top,
 .card-img-bottom {
   flex-shrink: 0;
-  width: 100%; }
+  width: 100%;
+  height: 300px;
+  object-fit: cover !important;
+}
 
 .card-img,
 .card-img-top {
